--- a/media/less/mobile/messages.less
+++ b/media/less/mobile/messages.less
@@ -110,8 +110,6 @@
     position: fixed;
     top: 50px;
     text-align: center;
-    .transition-property(~'left, right');
-    .transition-duration(0.5s);
     width: 100%;
     z-index: 1;
 
@@ -134,25 +132,6 @@
         right: 0;
         top: 0;
       }
-    }
-  }
-
-  &.exposed {
-    .mailbox-tabs {
-      left: 270px;
-    }
-  }
-
-  &[data-orientation="right"] {
-    &.exposed {
-      .mailbox-tabs {
-        right: 270px;
-      }
-    }
-
-    .mailbox-tabs {
-      left: auto;
-      right: 0;
     }
   }
 
