--- a/media/less/mobile/search.less
+++ b/media/less/mobile/search.less
@@ -46,12 +46,9 @@
     background: @mobileFormBackground;
     .box-sizing(border-box);
     height: 36px;
-    left: 0;
     padding: 5px 16px;
     position: fixed;
     top: 51px;
-    .transition-property(~'left, right');
-    .transition-duration(0.5s);
     width: 100%;
     z-index: 12;
 
@@ -81,12 +78,9 @@
     background: @mobileSubheaderBackground;
     .box-shadow(0 0 4px 0 rgba(0, 0, 0, 0.75));
     height: 24px;
-    left: 0;
     padding: 5px 0;
     position: fixed;
     top: 87px;
-    .transition-property(~'left, right');
-    .transition-duration(0.5s);
     width: 100%;
     z-index: 10;
 
@@ -118,28 +112,6 @@
           line-height: 24px;
         }
       }
-    }
-  }
-
-  &.exposed {
-    .search-bar,
-    .search-filters {
-      left: 270px;
-    }
-  }
-
-  &[data-orientation='right'] {
-    &.exposed {
-      .search-bar,
-      .search-filters {
-        right: 270px;
-      }
-    }
-
-    .search-bar,
-    .search-filters {
-      left: auto;
-      right: 0;
     }
   }
 
